--- a/style.css
+++ b/style.css
@@ -11,7 +11,9 @@ body {
   padding: 0 10px;
   min-height: 100vh;
   align-items: center;
-  background: #0a4354;
+  background: #8360c3;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #2ebf91, #8360c3);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #2ebf91, #8360c3); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   justify-content: center;
 }
 .container {
@@ -29,6 +31,7 @@ body {
 header #heading {
   font-size: 21px;
   font-weight: bold;
+  text-align: center;
 }
 header #para {
   margin-top: 5px;
@@ -60,9 +63,15 @@ header #para {
   cursor: pointer;
   font-size: 17px;
 }
+
+.form button:hover {
+  background: #003d5b;
+}
+
 .container .qr-code {
   display: flex;
   opacity: 0;
+  background: #f2f2f2;
   pointer-events: none;
   padding: 33px 0;
   border: 2px solid rgb(204, 204, 204);
